# dccd-oaiore-to-x3ml

./: README.md  pyproject.toml
resources/oai-ore-samples/: doi_10.34894_JBO2IO.json
scripts/flows/: oaiore_to_x3ml_flows.py
