[tool.poetry]
name = "dccd_oai_ore-2-x3ml"
version = "0.1.0"
description = ""
authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.11"
prefect = "^2.6.1"
requests = "^2.28.1"
minio = "^7.1.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
